Remove redundant false fallback and directly convert to list